# cam_lidar_calibration

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENCE  LICENSE  README.md  nodelet_definition.xml  package.xml
cfg/: bounds.cfg  camera_info.yaml  camera_info_.yaml  initial_params.txt  params.yaml
cmake/: FindEigen.cmake
config/: params.default.yaml
data/2022-10-09_20-03-52/pcd/: pose2_full.pcd  pose2_target.pcd  pose3_target.pcd  pose4_full.pcd  pose4_target.pcd  pose5_full.pcd  pose5_target.pcd  pose6_full.pcd  pose6_target.pcd
data/2022-10-09_20-18-01/pcd/: pose2_full.pcd  pose2_target.pcd
data/2022-10-09_20-23-45/pcd/: pose2_full.pcd  pose2_target.pcd
data/2022-10-09_20-30-13/: calibration_2022-10-09_20-34-15.csv  poses.csv
data/2022-10-09_20-30-13/pcd/: pose2_full.pcd  pose2_target.pcd  pose3_full.pcd  pose3_target.pcd  pose4_full.pcd  pose4_target.pcd
data/2022-10-10_15-06-34/: calibration_2022-10-10_15-16-06.csv  poses.csv
data/2022-10-10_15-06-34/pcd/: pose2_full.pcd  pose2_target.pcd  pose3_full.pcd  pose3_target.pcd  pose4_full.pcd  pose4_target.pcd
data/2022-10-20_06-46-14/pcd/: pose1_full.pcd  pose1_target.pcd
data/2022-10-20_07-00-59/pcd/: pose1_full.pcd  pose1_target.pcd
data/2022-10-20_07-13-29/: calibration_2022-10-20_07-16-31.csv  poses.csv
data/2022-10-20_07-13-29/pcd/: pose1_full.pcd  pose1_target.pcd  pose2_full.pcd  pose2_target.pcd  pose3_full.pcd  pose3_target.pcd  pose4_full.pcd  pose4_target.pcd  pose5_full.pcd  pose5_target.pcd  pose6_full.pcd  pose6_target.pcd
data/2022-11-07_21-08-08/pcd/: pose1_full.pcd  pose1_target.pcd
data/2022-11-07_21-31-28/pcd/: pose1_full.pcd  pose1_target.pcd  pose2_full.pcd  pose2_target.pcd  pose3_full.pcd  pose3_target.pcd  pose4_full.pcd  pose4_target.pcd
data/2022-11-08_05-06-10/pcd/: pose1_full.pcd  pose1_target.pcd
data/2022-11-08_22-44-09/pcd/: pose1_full.pcd  pose1_target.pcd
data/2022-11-08_22-46-33/pcd/: pose1_target.pcd
data/2022-11-08_22-55-06/pcd/: pose1_full.pcd  pose1_target.pcd
data/2022-11-08_23-27-12/pcd/: pose1_full.pcd  pose1_target.pcd  pose2_full.pcd  pose2_target.pcd
data/2022-11-09_00-44-50/pcd/: pose1_full.pcd  pose1_target.pcd  pose2_full.pcd  pose2_target.pcd  pose3_full.pcd  pose3_target.pcd  pose4_full.pcd  pose4_target.pcd
data/2022-11-09_00-54-42/: calibration_2022-11-09_01-02-13.csv  poses.csv
data/2022-11-09_00-54-42/pcd/: pose10_full.pcd  pose10_target.pcd  pose11_full.pcd  pose11_target.pcd  pose1_full.pcd  pose1_target.pcd  pose2_full.pcd  pose2_target.pcd  pose3_full.pcd  pose3_target.pcd  pose4_target.pcd  pose5_full.pcd  pose5_target.pcd  pose6_full.pcd  pose6_target.pcd  pose7_full.pcd  pose7_target.pcd  pose8_full.pcd  pose8_target.pcd  pose9_full.pcd  pose9_target.pcd
data/2022-11-09_01-12-11/: calibration_2022-11-09_01-19-10.csv  poses.csv
data/2022-11-09_01-12-11/pcd/: pose10_full.pcd  pose10_target.pcd  pose11_full.pcd  pose11_target.pcd  pose1_full.pcd  pose1_target.pcd  pose2_full.pcd  pose2_target.pcd  pose3_target.pcd  pose4_full.pcd  pose4_target.pcd  pose5_full.pcd  pose5_target.pcd  pose6_full.pcd  pose6_target.pcd  pose7_full.pcd  pose7_target.pcd  pose8_full.pcd  pose8_target.pcd  pose9_full.pcd  pose9_target.pcd
data/2022-11-09_02-44-29/: calibration_2022-11-09_02-47-29.csv  poses.csv
data/2022-11-09_02-44-29/pcd/: pose1_full.pcd  pose1_target.pcd  pose2_target.pcd  pose3_full.pcd  pose3_target.pcd  pose4_full.pcd  pose4_target.pcd  pose5_full.pcd  pose5_target.pcd
data/vlp/: calibration_2022-08-31_16-14-05.csv  calibration_2022-10-09_20-11-11.csv  calibration_2024-05-09_11-01-24.csv  calibration_quickstart.csv  poses.csv
data/vlp/pcd/: pose10_full.pcd  pose10_target.pcd  pose11_full.pcd  pose11_target.pcd  pose12_full.pcd  pose12_target.pcd  pose13_full.pcd  pose13_target.pcd  pose14_full.pcd  pose14_target.pcd  pose15_full.pcd  pose15_target.pcd  pose16_full.pcd  pose16_target.pcd  pose17_full.pcd  pose17_target.pcd  pose18_full.pcd  pose18_target.pcd  pose19_full.pcd  pose19_target.pcd  pose1_full.pcd  pose1_target.pcd  pose20_full.pcd  pose20_target.pcd  pose21_full.pcd  pose21_target.pcd  pose22_full.pcd  pose22_target.pcd  pose23_full.pcd  pose23_target.pcd  pose24_full.pcd  pose24_target.pcd  pose25_full.pcd  pose25_target.pcd  pose26_full.pcd  pose26_target.pcd  pose27_full.pcd  pose27_target.pcd  pose28_full.pcd  pose28_target.pcd  (+40 more)
docker/: Dockerfile  build.sh  dependencies  entrypoint.sh  run.sh
include/cam_lidar_calibration/: feature_extractor.h  load_params.h  main.h  openga.h  optimiser.h  optimizer.h  point_xyzir.h
launch/: assess_results.launch  cam_lidar_calibration.launch  nodelet_template_latest.launch  run_optimiser.launch
msg/: calibration_data.msg  extrinsics.msg
rviz/: cam_lidar_calibration.rviz
scripts/: visualise_results.py
src/: assess_calibration.cpp  cam_lidar_panel.cpp  cam_lidar_panel.h  feature_extraction_node.cpp  feature_extractor.cpp  input_sample.cpp  load_params.cpp  main.cpp  optimiser.cpp  optimizer.cpp
srv/: Optimise.srv  Sample.srv
test/: test_optimiser.cpp
