<package format="2">
  <name>cam_lidar_calibration</name>
  <version>0.0.1</version>
  <description>camera lidar extrinsic calibration</description>
  <maintainer email="s.verma@acfr.usyd.edu.au">Surabhi Verma</maintainer>
  <author>Surabhi Verma</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>eigen_conversions</depend>
  <depend>image_transport</depend>
  <depend>libnlopt-dev</depend>
  <depend>libpcl-all-dev</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>nav_msgs</depend>
  <depend>nodelet</depend>
  <depend>OpenCV</depend>
  <depend>roscpp</depend>
  <depend>rviz</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_definition.xml"/>
    <rviz plugin="${prefix}/plugin_description.xml"/>
</export>
</package>


